@@ -1,3 +1,6 @@
+2018-02-21 14:18:00 Alessandro De Salvo
+	* Refactoring the images to build from the minimal sources
+
 2018-02-20 17:25:00 Alessandro De Salvo
 	* Add new base minimal images
 
